sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:6: error: ';' expected but '(' found.
{var lm : getValeur(i);
                   ^AlgInsertionSort:7: error: identifier expected but integer literal found.
for(j<-i to 0 by -1 && tab[j-1] > elem;)
                             ^AlgInsertionSort:7: error: ']' expected but ';' found.
for(j<-i to 0 by -1 && tab[j-1] > elem;)
                                      ^AlgInsertionSort:7: error: illegal start of simple pattern
for(j<-i to 0 by -1 && tab[j-1] > elem;)
                                       ^AlgInsertionSort:11: error: illegal start of simple expression
}
^